--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     hi i am mahesh
+    i worked as shift incharge at STBL.
+    and i am liveing in <vizag class=""></vizag>
+
+
 </body>
 </html>
