--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     hi i am mahesh
+    i worked at STBL,
+    And completed my graduation at Gitam university visakhapatnam,
+    i am living in vizag.
 </body>
 </html>
