update details of project

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     hi i am mahesh
     i worked at STBL,
-    And completed my graduation at Gitam university visakhapatnam,
+    And completed =-graduation at Gitam university visakhapatnam
     i am living in vizag.
+
+    i have worked on few CLI app. I'll showcase it here tomorrow
 </body>
 </html>
