update details of project

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     And completed =-graduation at Gitam university visakhapatnam
     i am living in vizag.
 
-    i have worked on few CLI app. I'll showcase it here tomorrow
+    i have worked on few CLI app. I'll showcase it here tomorrow.
 </body>
 </html>
