--- a/index.html
+++ b/index.html
@@ -10,5 +10,19 @@
     i worked at STBL,
     And completed my graduation at Gitam university visakhapatnam,
     i am living in vizag.
+
+    my favorite books are 
+    1)To Kill a Mockingbird, by Harper Lee. ...
+    2)1984, by George Orwell. ...
+    3)Harry Potter and the Philosopher's Stone, by J.K. Rowling.
+    4)The Lord of the Rings, by J.R.R. ...
+    5)The Great Gatsby, by F. Scott Fitzgerald. ...
+    
+
+    My favorite movies are
+    1)bahubali
+    2)Jhon wick
+    3)fast and furious
+    4)how to trine your dragon
 </body>
 </html>
