--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>studentsite</title>
 </head>
 <body>
-    hi i am mahesh
+    hi
+    i am mahesh
     i worked at STBL,
     And completed my graduation at Gitam university visakhapatnam,
     i am living in vizag.
@@ -24,5 +25,6 @@
     2)Jhon wick
     3)fast and furious
     4)how to trine your dragon
+    
 </body>
 </html>
