add favorite movies and books

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     1)bahubali
     2)Jhon wick
     3)fast and furious
-    4)how to trine your dragon
-    
+    4)how to trine your dragon.
+
 </body>
 </html>
