--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>studentsite</title>
 </head>
 <body>
-    hi
-    i am mahesh
-    i worked at STBL,
-    And completed =-graduation at Gitam university visakhapatnam
-    i am living in vizag.
+    <h1>Hi! </h1> 
+    I am Mahesh
+    I worked at STBL,
+    And completed graduation at Gitam university Visakhapatnam
+    I am living in Visakhapatnam.
 
     my favorite books are 
     1)To Kill a Mockingbird, by Harper Lee. ...
@@ -22,9 +22,9 @@
 
     My favorite movies are
     1)bahubali
-    2)Jhon wick
+    2)John wick
     3)fast and furious
-    4)how to trine your dragon.
+    4)how to train your dragon.
 
 </body>
 </html>
