--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     And completed graduation at Gitam university Visakhapatnam
     I am living in Visakhapatnam.
 
-    my favorite books are 
+    <h2> my favorite books are </h2>
     1)To Kill a Mockingbird, by Harper Lee. ...
     2)1984, by George Orwell. ...
     3)Harry Potter and the Philosopher's Stone, by J.K. Rowling.
@@ -20,7 +20,7 @@
     5)The Great Gatsby, by F. Scott Fitzgerald. ...
     
 
-    My favorite movies are
+   <h3> My favorite movies are </h3>
     1)bahubali
     2)John wick
     3)fast and furious
